[package]
name = "xhci"
version = "0.1.0"
authors = [
    "Will Gulian <williamgulian@gmail.com>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.6.3", features = [] }
log = { version = "0.4.8", features = [] }
modular-bitfield = "0.6.0"
volatile = "0.3.0"


